Fixed brand translation

--- a/src/locales/ru/brand.json
+++ b/src/locales/ru/brand.json
@@ -62,9 +62,9 @@
         "title": "03. Использование лого",
         "originalForm": "Логотип Joystream в основном используется в оригинальном виде на белом фоне, но при необходимости его также можно использовать в альтернативных видах. Примеры ниже демонстрируют такие варианты использования.",
         "safeUse": "Границы размеров безопасного использования",
-        "visualPresentation": "Чтобы обеспечить наилучшее визуальное представление логотипа, на цифровых устройствах его лучше всего использовать в размерах <0>200 до 500+px</0> в ширину.",
-        "horizontalNarrow": "Логотип Joystream нельзя сужать до размеров менее чем 100px в цифровом или 20 мм в печатном форматах при горизонтальном использовании.",
-        "verticalNarrow": "При вертикальном использовании логотип нельзя сужать до размеров менее 70px в цифровом или 15 мм в печатном форматах."
+        "visualPresentation": "Чтобы обеспечить наилучшее визуальное представление логотипа, на цифровых устройствах его лучше всего использовать в размерах от <0>200 до 500px</0> в ширину.",
+        "horizontalNarrow": "Логотип Joystream нельзя сужать до размеров менее чем 100px в цифровом или 20 мм в печатном форматах в горизонтальном виде.",
+        "verticalNarrow": "В вертикальном виде логотип нельзя сужать до размеров менее 70px в цифровом или 15 мм в печатном форматах."
       },
       "logoSocialIcons": {
         "title": "04. Картинки в соцсетях",
@@ -80,8 +80,8 @@
       },
       "primaryColors": {
         "title": "01. Основные цвета",
-        "blackAndBlue": "Наши основные цвета - черный и синий Joystream Blue, характерный цвет, который помогает акцентировать и привлекать внимание. Белый цвет используется для успокоения взгляда, обеспечения прозрачности и улучшения читаемости.",
-        "blueGrey": "Еще один дополнительный цвет, который можно комбинировать с тремя основными цветами, - это серый с синим оттенком, его назначение сравнимо с белым, но он также дает хороший контраст с существующими белыми элементами там, где это необходимо."
+        "blackAndBlue": "Наши основные цвета - черный и синий Joystream Blue, характерный цвет, который помогает акцентировать и привлекать внимание. Белый цвет используется для умиротворения, обеспечения прозрачности и улучшения читаемости.",
+        "blueGrey": "Еще один дополнительный цвет, который можно комбинировать с тремя основными цветами, - это серый с синим оттенком. Его назначение сравнимо с белым, но он также дает хороший контраст с существующими белыми элементами там, где это необходимо."
       },
       "supportiveColors": {
         "title": "02. Вспомогательная цветовая палитра",
@@ -99,17 +99,17 @@
       "descriptiveIcons": {
         "title": "01. Описательные значки",
         "comprehensiveStyle": "Система иконографики Joystream - собственный комплексный стиль значков, который помогает объяснять определенные сложные темы простым и понятным образом.",
-        "symbolic": "Они не всегда прямолинейны и часто имеют символическое значение, но помогают сделать акцент на важных элементах.",
+        "symbolic": "Описательные значки не всегда прямолинейны и часто имеют символическое значение, но помогают сделать акцент на важных элементах.",
         "characteristicFeatures": "Характерные особенности описательных значков включают наличие параллельных полосатых заливок. Они являются представлением полос логотипа в виде теней.",
-        "angle": "Линии имеют угол 45°, они должны иметь ширину 2px и расстояние между ними должно быть 8px в масштабе 100%.",
+        "angle": "Линии должны быть под углом 45°, они должны иметь ширину 2px и расстояние между ними должно быть 8px в масштабе 100%.",
         "outlines": "Значки рисуются с использованием контуров шириной 12px в масштабе 100%, они должны иметь квадратные контуры и могут быть различного размера в зависимости от композиции.",
         "fit": "Значки в масштабе 100% должны умещаться в рамку размером 800x500px."
       },
       "systemIcons": {
         "title": "02. Системные значки",
-        "basicStyle": "Системные значки в основном стиле сочетают в себе два цвета: черный и синий Joystream Blue. Их цель - визуально представлять определенные действия на веб-сайте или платформе. Они должны читаться даже в небольших размерах до 18x18px.",
+        "basicStyle": "Основной стиль системных значков подразумевает сочетание двух цветов: черного и синего Joystream Blue. Их цель - визуально представлять определенные действия на веб-сайте или платформе. Они должны читаться даже в небольших размерах до 18x18px.",
         "strokes": "Системные значки рисуются с использованием штрихов шириной 2px с квадратными концами линий в рамке c сеткой в 24px.",
-        "subtleAccents": "По возможности, значки должны иметь тонкие синие вставки, составляющие не более 40% всей площади.",
+        "subtleAccents": "По возможности значки должны иметь тонкие синие вставки, составляющие не более 40% всей площади.",
         "types": "Типы системных значков",
         "fourTypes": {
           "text": "Мы выделяем четыре типа системных значков, и их следует использовать предпочтительно в их основном стиле, но при необходимости они могут заменять друг друга.",
@@ -121,7 +121,7 @@
       },
       "illustrations": {
         "overview": "Иллюстрации Joystream - символическое представление важных концепций проекта Joystream. Это может быть новый тестнет, определенная роль в сети или любые другие не менее важные вещи.",
-        "complex": "Они могут быть довольно сложными с визуальной точки зрения, несмотря на использование только трех цветов и отсутствие градиентов.",
+        "complex": "Они могут быть довольно сложными визуально, несмотря на использование только трех цветов и отсутствие градиентов.",
         "patterns": "Иллюстрации часто сочетаются с шаблонами, и в случае размещения их на синем фоне контур иллюстрации можно изменить на Joystream Blue, чтобы создать хороший цветовой баланс между шаблоном и фоном.",
         "distinctive": "Иллюстрации должны быть достаточно простыми, чтобы их можно было различить даже при уменьшении разрешения до 300x300px.",
         "adequateDetail": "Количество деталей должно соответствовать тому, что символизирует иллюстрация, и в большинстве случаев они должны использоваться в размерах не менее 500x500px."
@@ -130,14 +130,14 @@
         "translation": "Шаблоны - это близкий перевод эмблемы (J) в различные варианты геометрических форм, представляющих поток информации, технологии и экспериментальную индивидуальность бренда Joystream.",
         "supportTool": "Они были введены как вспомогательный инструмент, чтобы выделить определенные элементы, создать эмоциональную составляющую и стать неотъемлемыми элементами визуальной идентичности бренда.",
         "sixPieces": "Шаблоны визуально состоят из шести разных частей, которые можно поворачивать на 90 градусов в любом направлении, и они всегда должны иметь вид идеального квадрата.",
-        "oneCommonVertex": "В шаблонах при соприкосновении должна быть хотя бы одна общая вершина. Однако, они не всегда должны касаться друг друга, но, когда касаются, расстояние между частями всегда должно быть равным их ширине/высоте или кратному значению.",
+        "oneCommonVertex": "В шаблонах при соприкосновении должна быть хотя бы одна общая вершина. Однако они не всегда должны касаться друг друга, но, когда касаются, расстояние между частями всегда должно быть равным их ширине/высоте или кратному значению.",
         "howToUse": "Как использовать шаблоны",
         "oneOfFive": "В шаблонах может применяться один из пяти разных цветов в зависимости от используемого под ним фона и цели использования в конкретной ситуации.",
         "density": "В зависимости от ситуации их можно использовать в большем или меньшем разрешении.",
         "inUse": "Примеры шаблонов"
       },
       "typography": {
-        "overview": "Наши шрифты просты, понятны и современны. Это отражение нашего бренда и нашего посыла.Мы выбрали подходящие гарнитуры шрифтов из семейства PX Grotesk (обычный, полужирный) и Inter для конкретных точек соприкосновения и создания четкой иерархической структуры при подаче информации и сообщений.",
+        "overview": "Наши шрифты просты, понятны и современны. Это отражение нашего бренда и нашего посыла. Мы выбрали подходящие гарнитуры шрифтов из семейства PX Grotesk (обычный, полужирный) и Inter для конкретных точек соприкосновения и создания четкой иерархической структуры при подаче информации и сообщений.",
         "backup": "Если невозможно использовать ни тот, ни другой шрифт, выберите Arial Regular. Это может быть необходимо при использовании в операционных системах ПК, внутренних электронных документах или в офисах по всему миру. Не используйте Arial для любых печатных материалов.",
         "sample": "Ниже приведен образец идеального стека шрифтов, где PX Grotesk используется для заголовков и больших цитат, а Inter UI - для абзацев и текстов призыва к действию."
       },
@@ -147,7 +147,7 @@
         "variety": "Поскольку Joystream - уникальный экспериментальный проект, он может быть ассоциирован с широким спектром тем, которые могут быть связаны с ним с точки зрения фотографии. Он сугубо технический, особенно сейчас, когда мы находимся на этапе построения сообщества, поэтому большая часть фотографий будет связана с технологиями.",
         "consistency": "Один из способов обеспечить единообразие фотографий - использовать их в двух тонах, основанных на фирменных цветах. Для этой цели мы можем использовать удобный инструмент для создания двухцветных фотографий, как показано ниже.",
         "consistentDuotones": "Используя ссылку ниже, можно превратить любую фотографию в двухцветную, введя два основных цвета Joystream.",
-        "mood": "Очень важно настроение, которое передают фотографии. Они непременно должны вызывать чувство доверия, общности и радости. Фотографии должны быть разнообразными, поскольку предназначены для очень широкого круга пользователей. Их не обязательно использовать в двух тонах, но лучше, если их цифровая палитра не будет кричащей.",
+        "mood": "Очень важно настроение, которое передают фотографии. Они непременно должны вызывать чувство доверия, общности и радости. Фотографии должны быть разнообразными, поскольку предназначены для очень широкого круга пользователей. Их необязательно использовать в двух тонах, но лучше, если их цифровая палитра не будет кричащей.",
         "inUse": "Примеры использования фотографий"
       },
       "motion": {
