Fixes in founding members

--- a/src/locales/ru/founding-members.json
+++ b/src/locales/ru/founding-members.json
@@ -15,7 +15,7 @@
       "howItWorks": "Как это работает.",
       "inputPlaceholder": "например, joedoe",
       "inductionDate": "Дата присоединения",
-      "joinOurDiscord": "Присоединиться в Discord"
+      "joinOurDiscord": "в Discord"
     },
     "scoringPeriod": {
       "title": "Текущий отчетный период",
@@ -68,15 +68,15 @@
       "takePart": {
         "title": "Как принять участие в программе",
         "introduceYourself": {
-          "text": "Представьтесь в Discord.",
-          "altText": "Представьтесь в Discord."
+          "text": "Представьтесь в Discord",
+          "altText": "Представьтесь в Discord"
         },
         "contribute": {
-          "text": "Вносите вклад в проект.",
+          "text": "Вносите вклад в проект:",
           "contributions": "<0><0>обучение других участников</0><0>публикация постов в блоге и написание документации</0><0>создание и публикация видеоконтента</0><0>участие в ролях платформы в тестнете</0><0>обнаружение и отправка отчетов о багах и ошибках</0><0>участие в официальных баунти</0><0>дизайн и креатив</0></0>"
         },
         "report": "Регулярно подавайте отчеты о деятельности",
-        "earnPoints": "Зарабатывайте баллы в таблице лидеров.",
+        "earnPoints": "Зарабатывайте баллы в таблице лидеров",
         "becomeFM": "Становитесь членом-основателем!",
         "buttonText": "Перейти в Discord",
         "excluded": "Страны, не участвующие в программе: ",
@@ -89,9 +89,9 @@
         "numberOfFM": "количество членов-основателей",
         "numberOfCandidates": "количество кандидатов в члены-основатели",
         "leaderboards": "Таблицы лидеров",
-        "foundingMembersButton": "Очки членов-основателей",
-        "regularMembersButton": "Очки остальных участников",
-        "fullProgramRules": "Ознакомиться с полными правилами программы"
+        "foundingMembersButton": "Баллы членов-основателей",
+        "regularMembersButton": "Баллы остальных участников",
+        "fullProgramRules": "Подробные правила"
       },
       "cta": {
         "title": "Обсудить программу",
@@ -102,7 +102,7 @@
       },
       "disclaimer": {
         "title": "Отказ от ответственности",
-        "text": "Этот отказ от ответственности относится к веб-странице, доступной по адресу <0>www.joystream.org/token</0>, а также ко всем другим веб-страницам, цифровым сервисам или приложениям, опубликованным Jsgenesis («Компания»). Отказ от ответственности также применяется к любым материалам, опубликованным Компанией в любом формате, касательно токена JOY («Токен»). Публикации, сделанные Компанией, и вся содержащаяся в них информация не предназначена для использования любыми лицами, проживающими или находящимися в любой юрисдикции, где (1) распространение такой информации противоречит законам данной юрисдикции; или (2) такое распространение запрещено без получения необходимых лицензий или разрешений со стороны соответствующего филиала, дочерней или аффилированной организации Компании, в случае, если такие лицензии или разрешения не были получены. Компания не предоставляет инвестиционных, юридических или налоговых консультаций, и ничто в данном документе не должно трактоваться как финансовое, юридическое, налоговое или иное консультирование. Если специально не указано иное, вся информация о ценах является ориентировочной. В данном документе не дается и не подразумевается никаких гарантий в отношении точности, полноты или надежности информации, а также данных в отношении ценных бумаг, рынков или разработок. К данным материалам не следует относиться как к замене собственному суждению. Вся информация и материалы, опубликованные, распространяемые или иным образом предоставленные Компанией в отношении Токена, предоставляются в информационных целях только для Вашего некоммерческого личного использования. Никакая информация или материалы, опубликованные Компанией, не являются приглашением, предложением или рекомендацией покупать, продавать или использовать какие-либо инвестиционные инструменты, совершать какие-либо транзакции или заключать правовые акты любого рода."
+        "text": "Данный отказ от ответственности относится к веб-странице, доступной по адресу <0>www.joystream.org/token</0>, а также ко всем другим веб-страницам, цифровым сервисам или приложениям, опубликованным Jsgenesis («Компания»). Отказ от ответственности также применяется к любым материалам, опубликованным Компанией в любом формате, касательно токена JOY («Токен»). Публикации, сделанные Компанией, и вся содержащаяся в них информация не предназначены для использования любыми лицами, проживающими или находящимися в любой юрисдикции, где (1) распространение такой информации противоречит законам данной юрисдикции; или (2) такое распространение запрещено без получения необходимых лицензий или разрешений со стороны соответствующего филиала, дочерней или аффилированной организации Компании, в случае, если такие лицензии или разрешения не были получены. Компания не предоставляет инвестиционных, юридических или налоговых консультаций, и ничто в данном документе не должно трактоваться как финансовое, юридическое, налоговое или иное консультирование. Если специально не указано иное, вся информация о ценах является ориентировочной. В данном документе не дается и не подразумевается никаких гарантий в отношении точности, полноты или надежности информации, а также данных в отношении ценных бумаг, рынков или разработок. К данным материалам не следует относиться как к замене собственному суждению. Вся информация и материалы, опубликованные, распространяемые или иным образом предоставленные Компанией в отношении Токена, предоставляются в информационных целях только для Вашего некоммерческого личного использования. Никакая информация или материалы, опубликованные Компанией, не являются приглашением, предложением или рекомендацией покупать, продавать или использовать какие-либо инвестиционные инструменты, совершать какие-либо транзакции или заключать правовые акты любого рода."
       }
     },
     "leaderboards": {
