Fixed general - to look better on website UI

--- a/src/locales/ru/general.json
+++ b/src/locales/ru/general.json
@@ -100,7 +100,7 @@
     "alternateTitle": "Получайте оповещения",
     "subtitle": "Не беспокойтесь о спаме! Оставайтесь в курсе всех важных новостей.",
     "inputPlaceholder": "Email-адрес...",
-    "joinNewsletter": "Подписаться на рассылку",
+    "joinNewsletter": "Подписаться",
     "github": {
       "whitepaper": "White paper",
       "repository": "Репозиторий"
