--- a/src/locales/ru/privacy-policy.json
+++ b/src/locales/ru/privacy-policy.json
@@ -5,7 +5,7 @@
     },
     "hero": {
       "title": "Политика конфиденциальности и использования файлов cookie",
-      "text": "<0><0>Jsgenesis уважает Вашу приватность.</0><1/><1/>Эта Политика Конфиденциальности (\"Политика Конфиденциальности\") и Политика использования файлов cookie (\"Политика использования файлов cookie\") объясняют, как Jsgenesis (\"Jsgenesis\", \"Компания\", \"Мы\", \"Нас\", \"Наш\") собирает и использует данные и информацию, когда Вы (\"Пользователь\") используете любой из продуктов Joystream, разработанных организацией, именуемой <3>Joystream</3> в GitHub. Эти продукты (вместе называемые \"Программное обеспечение\") включают, но не ограничиваются всеми страницами домена <6>joystream.org</6> (\"Веб-сайт\"), <10>нодой Joyful</10> (\"Полная нода\"), <14>нодой хранения Colossus</14> (\"Нода Хранения\"), пользовательским интерфейсом Pioneer, либо <18>размещенным самостоятельно</18>, либо <22>размещенным у Нас</22> (\"Приложение\").</0>"
+      "text": "<0><0>Jsgenesis уважает Вашу приватность.</0><1/><1/>Эта Политика Конфиденциальности (\"Политика Конфиденциальности\") и Политика использования файлов cookie (\"Политика использования файлов cookie\") объясняют, как Jsgenesis (\"Jsgenesis\", \"Компания\", \"Мы\", \"Нас\", \"Наш\") собирает и использует данные и информацию, когда Вы (\"Пользователь\") используете любой из продуктов Joystream, разработанных организацией, именуемой <3>Joystream</3> в GitHub. Эти продукты (вместе называемые \"Программное обеспечение\") включают, но не ограничиваются всеми страницами домена <6>joystream.org</6> (\"Веб-сайт\"), <10>нодой Joyful</10> (\"Полная нода\"), <14>нодой хранения Colossus</14> (\"Нода хранения\"), пользовательским интерфейсом Pioneer, либо <18>размещенным самостоятельно</18>, либо <22>размещенным у Нас</22> (\"Приложение\").</0>"
     },
     "terms": {
       "title": "К Политике конфиденциальности и Политике использования файлов cookie относятся следующие термины:",
@@ -20,11 +20,11 @@
       "subtitle": "Последнее обновление 17 Апреля 2019",
       "agreement": {
         "title": "1. Согласие с Политикой",
-        "content": "Используя любое Наше Программное обеспечение, Пользователь принимает настоящую Политику Конфиденциальности. Если Вы действуете от имени другой компании или работодателя, Вы должны иметь полномочия действовать от их имени. Политика Конфиденциальности не распространяется ни на одну нашу рассылку, где Пользователи связаны <0>политикой конфиденциальности</0> <1>Mailchimp</1><2/><2/>Политика Конфиденциальности не применяется к любым другим сторонним службам, включая, помимо прочего, приложения, веб-сайты, инструменты или программное обеспечение, даже если они доступны по ссылкам или руководствам в нашем Программном обеспечении."
+        "content": "Используя любое Наше Программное обеспечение, Пользователь принимает настоящую Политику Конфиденциальности. Если Вы действуете от имени другой компании или работодателя, Вы должны иметь полномочия действовать от их имени. Политика Конфиденциальности не распространяется ни на одну нашу рассылку, где Пользователи связаны <0>политикой конфиденциальности</0> <1>Mailchimp</1><2/><2/>Политика Конфиденциальности не применяется к любым другим сторонним службам, включая, помимо прочего, приложения, веб-сайты, инструменты или программное обеспечение, даже если они доступны по ссылкам или руководствам к нашему Программному обеспечению."
       },
       "changes": {
         "title": "2. Изменения в Политике",
-        "content": "Настоящая Политика Конфиденциальности может быть изменена по собственному усмотрению Компании. В случае внесения каких-либо существенных изменений Пользователь будет уведомлен в используемом Сервисе. Обратите внимание, что включение новых продуктов в термин \"Программное обеспечение\", например, новый продукт, с которым взаимодействует Пользователь, заменяющий Приложение или новый инструмент для загрузки Контента, не считается существенным, поскольку оно не повлияет на Пользователей, если они не станут использовать новый продукт. Изменение названий программного обеспечения, терминологии, используемой в настоящей Политике Конфиденциальности, и изменение адресов ссылок также являются примерами несущественных изменений."
+        "content": "Настоящая Политика Конфиденциальности может быть изменена по собственному усмотрению Компании. В случае внесения каких-либо существенных изменений Пользователь будет уведомлен в используемом Сервисе. Обратите внимание, что включение новых продуктов в термин \"Программное обеспечение\", например, новый продукт, с которым взаимодействует Пользователь, заменяющий Приложение, или новый инструмент для загрузки Контента, не считается существенным, поскольку оно не повлияет на Пользователей, если они не станут использовать новый продукт. Изменение названий программного обеспечения, терминологии, используемой в настоящей Политике Конфиденциальности, и изменение адресов ссылок также являются примерами несущественных изменений."
       },
       "informationCollected": {
         "title": "3. Сбор информации",
@@ -44,7 +44,7 @@
       },
       "howWeUseCookies": {
         "title": "2. Как мы используем файлы cookie",
-        "content": "Мы используем файлы cookie для следующих целей нашего Сервиса: <0 /><0 /><1><0> Предоставление аналитики </0><0> Настройки хранения </0><0> локальное хранение Ключей и Членства.</0></1>"
+        "content": "Мы используем файлы cookie для следующих целей нашего Сервиса: <0 /><0 /><1><0> предоставление аналитики </0><0> настройки хранения </0><0> локальное хранение Ключей и Членства.</0></1>"
       },
       "thirdPartyCookies": {
         "title": "3. Сторонние файлы cookie",
