Fixed get-started translation - to fit UI better

--- a/src/locales/ru/get-started.json
+++ b/src/locales/ru/get-started.json
@@ -7,7 +7,7 @@
     "hero": {
       "title": "Как участвовать и вносить вклад",
       "subtitle": "Узнайте больше о способах получить вознаграждение, помогая проекту.",
-      "buttonText": "Обзор возможностей",
+      "buttonText": "Обзор способов",
       "imageAlt": "начинающий герой"
     },
     "howToStart": {
@@ -41,11 +41,11 @@
     "activeRoles": {
       "title": "Активные роли в текущем тестнете",
       "validatorText": "Валидатор - это субъект, проверяющий валидность создаваемых блоков. Он также является инициатором создания новых блоков и участвует в процессе согласования для фиксации нового блока в цепочке блокчейна. Обычно валидаторам выплачивается фиксированная сумма вознаграждения за каждый созданный блок. По своей сути эта роль очень похожа на роль майнеров в сети Bitcoin.",
-      "councilMemberText": "Члены совета избираются заинтересованными сторонами системы, чтобы действовать в долгосрочных интересах платформы. Они несут ответственность за распределение ресурсов, нанимают руководителей рабочих групп, которые следят за выполнением повседневных операций на платформе. Схема работает на основе системы предложений, позволяющей любому пользователю выдвигать те или иные предложения по изменению платформы.",
+      "councilMemberText": "Члены совета избираются заинтересованными сторонами системы, чтобы действовать в долгосрочных интересах платформы. Они несут ответственность за распределение ресурсов, нанимают руководителей рабочих групп, которые следят за выполнением повседневных операций на платформе. Схема работает на основе системы предложений, позволяющей каждому пользователю выдвигать предложения.",
       "storageProviderText": "Некоторые важнейшие компоненты платформы, такие как медиаконтент, находятся за пределами блокчейна. Целостность медиафайлов на платформе обеспечивается блокчейном, хотя сами файлы хранятся на отдельных серверах, которые отвечают за хранение и распространение данных. Провайдеры хранилища участвуют в этом процессе, обеспечивая хранение большого количества информации.",
-      "storageLeadText": "Руководитель службы хранения нанимается непосредственно Советом посредством системы предложений и занимается наймом, увольнением и общим руководством поставщиками хранилищ в сети.",
-      "contentCuratorText": "Кураторы контента отвечают за публикацию и мониторинг нового контента в каталоге, а также реагируют на сообщения о спорных публикациях. Они также обязаны обновлять информацию о содержании контента, чтобы обеспечить точность и правильность метаданных. Еще одна важная часть роли - помощь разработчикам в улучшении компонентов, с которыми взаимодействуют пользователи, для улучшения общего впечатления от работы с платформой.",
-      "contentCreatorText": "Создатели контента - это те участники платформы, которые решили разместить на платформе оригинальный или сторонний контент, который не запрещен для повторной публикации лицензионными ограничениями. Эта роль является неформальной, и в настроящее время какие-либо поощрения для исполнителей этой роли не предусмотрены, хотя наиболее активные участники, скорее всего, будут вознаграждены в рамках программы членов-учредителей.",
+      "storageLeadText": "Руководитель службы хранения нанимается напрямую Советом посредством системы предложений и занимается наймом, увольнением и общим руководством поставщиками хранилищ в сети.",
+      "contentCuratorText": "Кураторы контента отвечают за публикацию и мониторинг нового контента в каталоге, а также реагируют на сообщения о спорных публикациях. Они также обязаны обновлять информацию о содержании контента, обеспечивая точность и правильность метаданных. К их задачам относится и помощь разработчикам в улучшении компонентов, с которыми взаимодействуют пользователи, для улучшения юзабилити.",
+      "contentCreatorText": "Создатели контента - это участники платформы, решившие разместить на платформе оригинальный или сторонний контент, не запрещенный для повторной публикации лицензионными ограничениями. Эта роль является неформальной, и в настоящее время пощрения не предусмотрены, хотя самые активные, хотя наиболее активные участники, скорее всего, будут вознаграждены по программе членов-учредителей.",
       "contentLeadText": "Совет имеет право назначать главного куратора контента, который может нанимать дополнительных кураторов. Главный куратор контента также определяет приоритеты для других кураторов. Если какой-либо куратор контента не выполняет свою роль должным образом, главный куратор может принять решение об увольнении такого куратора после консультации с Советом."
     },
     "roleCard": {
