Fixed hydra translation

--- a/src/locales/ru/hydra.json
+++ b/src/locales/ru/hydra.json
@@ -26,7 +26,7 @@
         },
         "noSearch": {
           "title": "Отсутствие поиска",
-          "text": "Блокчейн может поддерживать возможность поиска простого текста по транзакциям или состояниями, однако выполнение настоящего полнотекстового поиска на клиентской стороне практически невозможно."
+          "text": "Блокчейн может поддерживать возможность поиска простого текста по транзакциям или состояниям, однако выполнение настоящего полнотекстового поиска на клиентской стороне практически невозможно."
         },
         "overFetching": {
           "title": "Излишние данные",
