Updated about translation

--- a/src/locales/ru/about.json
+++ b/src/locales/ru/about.json
@@ -20,7 +20,7 @@
     },
     "hero": {
       "title": "Мы создаем Joystream, чтобы дать ему свободу",
-      "subtitle": "Команда Jsgenesis является ядром, которое разрабатывает Joystream - платформу на блокчейне с открытым исходным кодом."
+      "subtitle": "Команда Jsgenesis является ядром, которое разрабатывает Joystream, - платформу на блокчейне с открытым исходным кодом."
     },
     "ourTeam": {
       "title": "Наша команда",
