Updated landing translation

--- a/src/locales/ru/landing.json
+++ b/src/locales/ru/landing.json
@@ -32,7 +32,7 @@
       "reasons": {
         "tokens": {
           "title": "Токены",
-          "text": "Зарабатывайте токены основной сети, которая запускается в 2021"
+          "text": "Зарабатывайте токены основной сети, которая запускается в 2021 г."
         },
         "cash": {
           "title": "Наличные",
@@ -46,7 +46,7 @@
     },
     "exploreJoystream": {
       "title": "Начните изучение Joystream прямо сейчас",
-      "subtitle": "Два быстро развивающихся приложения для просмотра контента и управления.",
+      "subtitle": "Два быстро развивающихся приложения для просмотра контента и управления",
       "atlas": {
         "text": "Atlas - флагманское приложение для просмотра и публикации контента в Joystream. Смотрите видео, подписывайтесь на авторов, открывайте для себя новый контент либо создавайте собственный канал и формируйте свою аудиторию.",
         "link": "Попробовать Atlas",
