Minor changes to general translation

--- a/src/locales/ru/general.json
+++ b/src/locales/ru/general.json
@@ -107,7 +107,7 @@
     },
     "usefulLinks": {
       "title": "Полезные ссылки",
-      "hiring": "Открыты вакансии!",
+      "hiring": "Вакансии",
       "brandGuidance": "Правила использования айдентики"
     },
     "followUs": "Следите за новостями"
