Minor fixes in about

--- a/src/locales/ru/about.json
+++ b/src/locales/ru/about.json
@@ -33,7 +33,7 @@
     "positions": {
       "title": "Открытые вакансии",
       "available": "Открыто 3 вакансии",
-      "join": "Присоединиться",
+      "join": "Присоединиться к",
       "roles": {
         "frontEnd": "Фронтенд-разработчик",
         "blockchain": "Блокчейн-разработчик",
